# OmniDaemon

./: .gitignore  .mintlifyignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build.sh  docs.json  pyproject.toml
.github/workflows/: test.yml
.omniagent_config/: servers_config_filesystem_assistant_agent.json
docs/: index.mdx
docs/api-reference/: cli-reference.mdx  sdk-api.mdx
docs/architecture/: system-overview.mdx
docs/community/: contributing.mdx  support.mdx
docs/core-concepts/: agent-lifecycle.mdx  callback-pattern.mdx  event-bus-architecture.mdx  event-driven-architecture.mdx  pluggable-architecture.mdx  storage-architecture.mdx
docs/enterprise/: deployment.mdx  use-cases.mdx
docs/examples/: content-moderation.mdx  google-adk-agent.mdx  omnicore-agent.mdx  publisher.mdx
docs/getting-started/: introduction.mdx  quick-start.mdx
docs/how-to-guides/: common-patterns.mdx  configuration.mdx  monitoring.mdx
examples/: fast_api_impl.py  publisher.py  run_both.py
examples/content_moderation/: __init__.py  agent_runner.py  ingest.py  metrics.py  publisher.py  schema.py  state.py  tools.py
examples/google_adk/: agent_runner.py  publisher.py
examples/omnicoreagent/: agent_runner.py  publisher.py
examples/omnicoreagent_dir/: agent_runner.py  publisher.py
src/omnidaemon/: __init__.py  result_store.py  schemas.py  sdk.py
tests/: __init__.py  conftest.py  fast.py  main.py  pub.py
tests/integration/: __init__.py  test_concurrent_operations.py  test_error_recovery.py  test_performance.py  test_storage_switching.py  test_workflows.py
(+28 files in other folders)
