
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.uv.sources]
omnicoreagent = { path = "dist/omnicoreagent-0.2.7-py3-none-any.whl" }

[project]
name = "omnidaemon"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.2",
    "google-adk>=1.16.0",
    "omnicoreagent",
    "ruff>=0.14.0",
    "tabulate>=0.9.0",
]

[project.scripts]
omni = "omnidaemon.cli.main:app"
[tool.hatch.build.targets.wheel]
packages = ["src/omnidaemon"]

[tool.hatch.build]
packages = ["src/omnidaemon"]
